force-app/main/default/objects/Case_Task_Tracker__c/Case_Task_Tracker__c.object-meta.xml
<CustomObject>
    <description>This object will track the number of tasks created in a case</description>
    <label>Case Task Tracker</label>
    <nameField>
        <displayFormat>TT-{00000000}</displayFormat>
        <label>Task Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Task Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>