force-app/main/default/objects/Case_Task_Tracker__c/fields/Exclude_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Tasks__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this checkbox for the tasks to be excluded</description>
    <label>Exclude Tasks</label>
    <type>Checkbox</type>
</CustomField>