force-app/main/default/objects/Case_Task_Tracker__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>To capture Task Id (Salesforce 18 digits)</description>
    <label>Task Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>