force-app/main/default/objects/Case_Task_Tracker__c/fields/Task_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Task_Sequence__c</fullName>
    <description>To capture sequence of task creations on case</description>
    <label>Task Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>